--- a/package.json
+++ b/package.json
@@ -27,9 +27,19 @@
     ]
   },
   "dependencies": {
+    "antd": "^4.12.3",
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "2.32.3",
+    "gatsby-plugin-antd": "^2.2.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-netlify-cms": "^4.1.40",
+    "gatsby-plugin-styled-components": "^3.10.0",
+    "gsap": "^3.6.0",
+    "netlify-cms-app": "^2.11.20",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
+    "styled-components": "^5.2.1",
     "tsconfig-paths-webpack-plugin": "3.3.0"
   },
   "devDependencies": {
@@ -38,6 +48,7 @@
     "@types/node": "14.14.25",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
+    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
     "babel-plugin-root-import": "6.6.0",
