--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-netlify-cms": "^4.1.40",
     "gatsby-plugin-styled-components": "^3.10.0",
+    "gatsby-source-filesystem": "^3.7.0",
+    "gatsby-transformer-remark": "^4.4.0",
     "gsap": "^3.6.0",
     "netlify-cms-app": "^2.11.20",
     "react": "17.0.1",
