--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-ts",
+  "name": "wishaball",
   "description": "A TypeScript starter for Gatsby that includes all you need to build amazing projects",
   "version": "1.0.0",
   "private": true,
-  "author": "João Pedro Schmitz <hey@joaopedro.dev> (https://joaopedro.dev)",
+  "author": "haohanqi email:haohanqiharry@gmail.com",
   "license": "MIT",
   "keywords": [
     "gatsby",
@@ -20,12 +20,6 @@
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
     "postinstall": "husky install"
   },
-  "lint-staged": {
-    "./src/**/*.{ts,js,jsx,tsx}": [
-      "yarn lint --fix",
-      "yarn format"
-    ]
-  },
   "dependencies": {
     "antd": "^4.12.3",
     "babel-plugin-styled-components": "^1.12.0",
@@ -34,8 +28,6 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-netlify-cms": "^4.1.40",
     "gatsby-plugin-styled-components": "^3.10.0",
-    "gatsby-source-filesystem": "^3.7.0",
-    "gatsby-transformer-remark": "^4.4.0",
     "gsap": "^3.6.0",
     "netlify-cms-app": "^2.11.20",
     "react": "17.0.1",
@@ -52,7 +44,8 @@
     "@types/react-dom": "17.0.1",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.14.2",
-    "@typescript-eslint/parser": "4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-root-import": "6.6.0",
     "commitizen": "4.2.3",
     "cz-conventional-changelog": "3.3.0",
@@ -65,10 +58,8 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "5.0.9",
-    "lint-staged": "10.5.4",
     "prettier": "2.2.1",
-    "typescript": "4.1.5"
+    "typescript": "^4.1.5"
   },
   "config": {
     "commitizen": {
