--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - { name: path, label: Path }
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
-      - { name: important, label: Important, widget: boolean }
+      - { name: important, label: Important, widget: boolean, required: false }
       - {
           name: backgroundImage,
           label: BackgroundImage,
