--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "dependencies": {
     "antd": "^4.12.3",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "2.32.3",
+    "gatsby": "^3.13.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.12.0",
-    "gatsby-plugin-netlify-cms": "^4.1.40",
+    "gatsby-plugin-netlify-cms": "^5.6.0",
+    "gatsby-plugin-preact": "^5.13.0",
     "gatsby-plugin-sharp": "^3.12.0",
     "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-source-filesystem": "^3.7.1",
@@ -35,6 +36,8 @@
     "gatsby-transformer-sharp": "^3.12.0",
     "gsap": "^3.6.0",
     "netlify-cms-app": "^2.11.20",
+    "preact": "^10.5.14",
+    "preact-render-to-string": "^5.1.19",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
@@ -64,7 +67,8 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.2.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "webpack": "^5.52.1"
   },
   "config": {
     "commitizen": {
