--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "antd": "^4.12.3",
-    "babel-plugin-styled-components": "^1.12.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.13.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-antd": "^2.2.0",
@@ -41,7 +41,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "3.3.0"
   },
   "devDependencies": {
@@ -55,7 +55,7 @@
     "@typescript-eslint/parser": "^4.14.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-root-import": "6.6.0",
-    "commitizen": "4.2.3",
+    "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.20.0",
     "eslint-config-airbnb": "18.2.1",
