--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "preact-render-to-string": "^5.1.19",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "3.3.0"
