--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.2.1",
     "typescript": "^4.1.5",
+    "typescript-styled-plugin": "^0.18.2",
     "webpack": "^5.52.1"
   },
   "config": {
