--- a/package.json
+++ b/package.json
@@ -53,16 +53,17 @@
     "@types/react-dom": "17.0.1",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-root-import": "6.6.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.20.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "7.2.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-root-import": "1.0.4",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.22.0",
