--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "preact-render-to-string": "^5.1.19",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "reakit": "^1.3.11",
     "styled-components": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "3.3.0"
   },
@@ -51,11 +53,12 @@
     "@types/node": "14.14.25",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
+    "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-root-import": "6.6.0",
+    "babel-plugin-root-import": "^5.1.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.20.0",
