--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-is": "^18.1.0",
     "reakit": "^1.3.11",
     "styled-components": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "3.3.0"
